--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,19 @@ version: "3.8"
 
 services:
   app:
-    build: ./
+    build: .
+    # image: <nombre de la imagen>
     environment:
       MONGO_URL: "mongodb://db:27017/test"
     depends_on:
       - db
     ports:
       - "3000:3000"
+    volumes:
+      - .:/usr/src
+      # conservar lo que tiene el contenedor en /usr/src/node_modules
+      - /usr/src/node_modules
+    command: npx nodemon index.js
 
   db:
     image: mongo
