--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - db
     ports:
       - "3000:3000"
+    # trabajar directamente con el codigo en docker
     volumes:
       - .:/usr/src
       # conservar lo que tiene el contenedor en /usr/src/node_modules
